商品詳細画面作成

--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,1 +1,8 @@
-<p>product works!</p>
+<div class="container">
+  <h2>商品名</h2>
+  <img src="https://picsum.photos/200/300" alt="" srcset="">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi corrupti quidem fugit ad assumenda, delectus iste laboriosam nisi eum odio velit accusamus consequuntur laborum? Omnis optio quae aut pariatur et.</p>
+  <button>カートにいれる</button>
+  <a routerLink="/">TOPに戻る</a>
+</div>
+
