--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
   </button>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
