--- a/src/app/products/products/products.component.scss
+++ b/src/app/products/products/products.component.scss
@@ -5,21 +5,22 @@
   justify-content: space-evenly;
   align-content: flex-start;
 
-  .goods_card {
+  a {
     text-decoration: none;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 8px;
-    padding: 6px;
-
     &:hover {
       cursor: pointer;
     }
     &:visited {
       color: initial;
     }
+  }
+  .goods_card {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 8px;
+    padding: 6px;
     &__title {
       font-size: 18px;
       font-weight: 600;
